grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    pass_statement: _ => prec.left('pass'),
    function_definition: $ => seq(
      optional('async'),
      'def',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      ':',
      field('body', $._suite),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    default_parameter: $ => seq(
      field('name', choice($.identifier, $.tuple_pattern)),
      '=',
      field('value', $.expression),
    ),

    binary_operator: $ => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '^', PREC.xor],
        [prec.left, '<<', PREC.shift],
        [prec.left, '>>', PREC.shift],
      ];

      // @ts-ignore
      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $.primary_expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $.primary_expression),
      ))));
    },

    c_cast_expression: $ => prec(PREC.unary, seq(
      '<',
      field('type', $.c_type),
      '>',
      field('value', $.primary_expression),
    )),

    assignment: $ => seq(
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type)),
        seq(':', field('type', $.type), '=', field('right', $._right_hand_side)),
      ),
    ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
      $.yield,
    ),

    attribute: $ => prec(PREC.call, seq(
      field('object', $.primary_expression),
      '.',
      field('attribute', $.identifier),
    )),

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('arguments', choice(
        $.generator_expression,
        $.argument_list,
      )),
    )),

    list: $ => seq(
      '[',
      optional($._collection_elements),
      ']',
    ),

    _collection_elements: $ => seq(
      commaSep1(choice(
        $.expression, $.yield, $.list_splat, $.parenthesized_list_splat,
      )),
      optional(','),
    ),

    string: $ => seq(
      $.string_start,
      repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    float: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(seq(
        choice(
          seq(digits, '.', optional(digits), optional(exponent)),
          seq(optional(digits), '.', digits, optional(exponent)),
          seq(digits, exponent),
        ),
        optional(/[jJ]/),
      ));
    },

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    true: _ => 'True',
    none: _ => 'None',

    c_type: $ => {
      const keyword = value => alias(value, $.identifier);
      const complex_keyword = alias(token(prec(1, 'complex')), $.identifier);
      const integer_type = choice(
        keyword('char'),
        keyword('short'),
        seq(keyword('short'), keyword('int')),
        keyword('int'),
        keyword('long'),
        seq(keyword('long'), keyword('int')),
        seq(keyword('long'), keyword('long')),
        seq(keyword('long'), keyword('long'), keyword('int')),
      );
      const numeric_type = choice(
        integer_type,
        seq(keyword('float'), complex_keyword),
        seq(keyword('double'), complex_keyword),
        seq(keyword('long'), keyword('double'), complex_keyword),
        keyword('float'),
        keyword('double'),
        seq(keyword('long'), keyword('double')),
      );

      return prec.right(PREC.c_type, seq(
        optional('const'),
        choice(
          seq(choice(keyword('unsigned'), keyword('signed')), choice(integer_type, $.identifier)),
          numeric_type,
          keyword('void'),
          keyword('bint'),
          $.c_tuple_type,
          $.parenthesized_c_type,
          $.dotted_name,
          $.identifier,
        ),
        optional(field('suffix', choice(
          $.c_pointer_declarator,
          $.c_reference_declarator,
          $.c_memoryview_declarator,
          repeat1($.c_array_declarator),
        ))),
      ));
    },

    c_tuple_type: $ => seq(
      '(',
      $.c_type,
      ',',
      commaSep1($.c_type),
      optional(','),
      ')',
    ),

    parenthesized_c_type: $ => seq(
      '(',
      $.c_type,
      ')',
    ),

    c_pointer_declarator: _ => prec(PREC.c_type, repeat1('*')),

    c_declarator: $ => choice(
      seq(
        field('function_pointer', $.c_function_pointer_declarator),
        optional(seq('=', field('value', $.expression))),
      ),
      $._c_simple_declarator,
    ),

    _c_simple_declarator: $ => seq(
      optional(field('prefix', $.c_pointer_declarator)),
      field('name', $.identifier),
      optional(field('suffix', repeat1($.c_array_declarator))),
      optional(seq('=', field('value', $.expression))),
    ),

    c_function_pointer_declarator: $ => seq(
      '(',
      '*',
      field('name', $.identifier),
      ')',
      field('parameters', $.c_declaration_parameters),
    ),

    c_array_declarator: $ => seq(
      '[',
      optional(field('size', $.integer)),
      ']',
    ),

    cdef_statement: $ => prec(PREC.cdef, seq(
      'cdef',
      optional(choice('readonly', 'public')),
      field('type', $.c_type),
      commaSep1(field('declarator', $.c_declarator)),
    )),

    c_variable_declaration: $ => prec(PREC.c_type, seq(
      field('type', $.c_type),
      commaSep1(field('declarator', $.c_declarator)),
    )),

    cdef_block: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      ':',
      field('body', $._cython_extern_suite),
    )),

    cdef_struct_definition: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      optional(field('modifier', alias('packed', $.identifier))),
      field('kind', alias('struct', $.identifier)),
      field('name', $.identifier),
      ':',
      field('body', $._cython_extern_suite),
    )),

    cdef_union_definition: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      field('kind', alias('union', $.identifier)),
      field('name', $.identifier),
      ':',
      field('body', $._cython_extern_suite),
    )),

    c_struct_definition: $ => prec(PREC.cdef + 1, seq(
      field('kind', alias('struct', $.identifier)),
      field('name', $.identifier),
      ':',
      field('body', $._cython_extern_suite),
    )),

    cdef_enum_definition: $ => prec(PREC.cdef + 1, seq(
      choice('cdef', 'cpdef'),
      'enum',
      optional(field('name', $.identifier)),
      ':',
      field('body', $._c_enum_suite),
    )),

    c_enum_member: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $.expression))),
    ),

    _c_enum_suite: $ => choice(
      seq($._indent, alias($._c_enum_block, $.block)),
      alias($._newline, $.block),
    ),

    cdef_function_definition: $ => prec(PREC.cdef + 1, seq(
      choice('cdef', 'cpdef'),
      optional('inline'),
      optional('api'),
      optional(field('return_type', $.c_type)),
      field('name', $.identifier),
      field('parameters', $.c_parameters),
      optional($._c_function_modifiers),
      ':',
      field('body', $._suite),
    )),

    c_parameters: $ => seq(
      '(',
      optional($._c_parameters_list),
      ')',
    ),

    c_declaration_parameters: $ => seq(
      '(',
      optional($._c_declaration_parameters_list),
      ')',
    ),

    _c_parameters_list: $ => seq(
      commaSep1(choice($.c_parameter, $.c_variadic_parameter)),
      optional(','),
    ),

    _c_declaration_parameters_list: $ => seq(
      commaSep1(choice($.c_declaration_parameter, $.c_variadic_parameter)),
      optional(','),
    ),

    c_parameter: $ => choice(
      seq(
        field('type', $.c_type),
        field('name', $.identifier),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_function_pointer_type),
        optional(seq('=', field('default', $.expression))),
      ),
      $.parameter,
    ),

    c_declaration_parameter: $ => choice(
      seq(
        field('type', $.c_function_pointer_type),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_type),
        field('name', $.identifier),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_type),
        optional(seq('=', field('default', $.expression))),
      ),
      $.parameter,
    ),

    c_noexcept_clause: $ => alias('noexcept', $.identifier),

    _c_function_modifiers: $ => choice(
      seq(
        field('noexcept', $.c_noexcept_clause),
        optional(field('nogil', alias('nogil', $.identifier))),
        optional(field('except_clause', $.cdef_except_clause)),
      ),
      seq(
        field('nogil', alias('nogil', $.identifier)),
        optional(field('except_clause', $.cdef_except_clause)),
      ),
      field('except_clause', $.cdef_except_clause),
    ),

    // bare function declarations inside extern blocks: `T sin[T](T x)`
    _cython_extern_suite: $ => choice(
      seq($._indent, alias($._cython_extern_block, $.block)),
      alias($._newline, $.block),
    ),

    cdef_class_definition: $ => seq(
      'cdef',
      'class',
      field('name', $.identifier),
      field('superclasses', optional($.argument_list)),
      ':',
      field('body', $._suite),
    ),

    ctypedef_statement: $ => prec(PREC.cdef, seq(
      'ctypedef',
      choice(
        field('type', $.c_function_pointer_type),
        seq(
          field('type', $.c_type),
          field('name', $.identifier),
        ),
      ),
    )),
